modifications to support hbase on rome, plus export script